# amr_emulator

./: CMakeLists.txt  README.md  main.cpp  octave-workspace
config/: amr_params.yaml
src/: main.cpp  view.sh
src/app/: amrManager.cpp  amrManager.h  amr_manager.cpp  amr_manager.h
src/domain/: amr.cpp  amr.h  localizer.cpp  localizer.h  motorController.cpp  motorController.h  navigation.cpp  navigation.h  vcu.cpp  vcu.h
src/domain/common/: node_edge_info.h
src/domain/interface/: accelerationModel.h  iamr.h  ilocalizer.h  imotorController.h  inavigation.h  iprotocol.h  ivcu.h
src/domain/models/: ddAccelerationModel.cpp  ddAccelerationModel.h
src/domain/models/acceleration/: ddAccelerationModel.h  dd_acceleration_model.cpp  dd_acceleration_model.h  dd_acceleration_without_dynamics_model.cpp
src/domain/models/battery/: battery_model_simple.cpp  battery_model_simple.h
src/domain/module/amr/: amr copy 2.cpp  amr.h  (+4 more)
src/domain/protocols/: customTcpProtocol.cpp  customTcpProtocol.h  iprotocol.h  test.cpp  vda5050Protocol.cpp  vda5050Protocol.h  vda5050_protocol copy.cpp  vda5050_protocol.cpp  vda5050_protocol.h  vda5050_protocol_old.cpp  vda5050_protocol_수정전.h
src/infrastructure/: tcpServer.cpp  tcpServer.h  vda5050Protocol.cpp  vda5050Protocol.h  yamlConfig.cpp  yamlConfig.h  yaml_config.cpp  yaml_config.h
src/presentation/: amrServer.cpp  amrServer.h  amr_server.cpp
test/: CMakeLists.txt  acs_emulator.cpp  test_motor_controller copy.cpp  test_motor_controller.cpp
test/fms_mqtt_publish/: fms_mqtt_publish.cpp
test/fms_test/: test_fms_vda5050_client.cpp
(+22 files in other folders)
